--- a/profil.html
+++ b/profil.html
@@ -22,7 +22,7 @@
     <!-- <link rel="stylesheet" href="css/shop.css"> -->
     <link rel="stylesheet" href="css/profil.css">
     <script src="js/index.js" type="module"></script>
-    <script src="js/profil.js" defer></script>
+    <script src="js/profil.js" type="module"></script>
     <title>Ecommerce Website</title>
 </head>
 <body class="home">
@@ -376,10 +376,6 @@
             <div class="adresse-content">
                 <div class="methode">
                     <h3>Adresse par défaut :</h3>
-                    <!-- <p id="data-name1">Oumarou Mamoudou</p>
-                    <p id="data-adresse">C2 mosquée algoufrane</p>
-                    <p id="data-ville">Monastir, Monastir</p>
-                    <p id="data-phone">+216 56193706 / +216 56193706</p> -->
                     <p id="data-name1"></p>
                     <p id="data-adresse"></p>
                     <p id="data-ville"></p>
