--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="css/index.css">
     <script src="js/index.js" type="module"></script>
+    <script src="js/firebase.js" type="module"></script>
     <title>Ecommerce Website</title>
 </head>
 <body class="home">
