--- a/index.html
+++ b/index.html
@@ -387,6 +387,21 @@
     <section class="product-section">
 
         <!-- ====================1==================== -->
+        <!-- <div class="category bg-very-light-gray grid">
+            <div>
+                <h3 class="text-white fs-50 fs-montserrat">Enjoy <span class="block 
+                    fs-300 fs-poppins">With</span> <span class="earphone uppercase fs-400 
+                    fs-montserrat bold-900 lineheight">Earphone</span></h3>
+                    <button class="Product-btn large-btn text-white bg-red 
+                    fs-montserrat">Browse</button>
+            </div>
+            
+            <div class="product-img2">
+                <img src="image/phone.png" alt="">
+            </div>
+        </div> -->
+
+        <!-- ====================1==================== -->
         <div class="category bg-black grid">
             <div>
                 <h3 class="text-white fs-50 fs-montserrat">Enjoy <span class="block 
