--- a/product.html
+++ b/product.html
@@ -490,7 +490,7 @@
         </nav>
 
         <div class="all">
-        <div class="container tab-content" id="description">
+        <div class="container1 tab-content" id="description">
             <h2>Fiche Technique</h2>
             <table class="specs-table">
                 <tr>
@@ -539,7 +539,7 @@
         </div>
         <!-- style="display:none;" -->
         <!-- style="transform:scale(0);" -->
-        <div class="container tab-content" id="reviews" style="display:none;" style="transform:scale(0);">
+        <div class="container1 tab-content" id="reviews" style="display:none;" style="transform:scale(0);">
             <div class="reviews-section">
                 <p>(2 avis clients)</p>
                 <div class="review">
