--- a/favoris.html
+++ b/favoris.html
@@ -414,7 +414,7 @@
             </ul>
         
             <div class="buttons">
-                <button>
+                <button id="exit">
                     <span class="span1">
                         <i class="uil uil-angle-left"></i>
                     </span>
