--- a/product.html
+++ b/product.html
@@ -95,7 +95,7 @@
                 class="primary-navigation flex">
                 <li><a class="fs-100 fs-montserrat bold-500" href="/index.html">Home</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/shop.html">Shop</a></li>
-                <li><a class="active fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>
+                <!-- <li><a class="active fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li> -->
                 <li><a class="fs-100 fs-montserrat bold-500" href="/about.html">Abouts Us</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/blog.html">Blog</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/contactus.html">Contact Us</a></li>
@@ -434,12 +434,12 @@
                 </div>
             </div>
             <div class="buttons">
-                <button>Favoris 
+                <button id="add-favori">Favoris 
                     <span class="favori text-red">
                         <i class="uil uil-heart-alt"></i>
                     </span>
                 </button>
-                <button>Add To Cart 
+                <button id="add-cart">Add To Cart 
                     <span>
                         <svg class="" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1"/>
