--- a/favoris.html
+++ b/favoris.html
@@ -97,7 +97,7 @@
                 class="primary-navigation flex">
                 <li><a class="fs-100 fs-montserrat bold-500" href="/index.html">Home</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/shop.html">Shop</a></li>
-                <li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>
+                <!--<li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>-->
                 <li><a class="fs-100 fs-montserrat bold-500" href="/about.html">Abouts Us</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/blog.html">Blog</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/contactus.html">Contact Us</a></li>
