--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 class="primary-navigation flex">
                 <li><a class="active fs-100 fs-montserrat bold-500" href="/index.html">Home</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/shop.html">Shop</a></li>
-                <li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>
+                <!--<li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>-->
                 <li><a class="fs-100 fs-montserrat bold-500" href="/about.html">Abouts Us</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/blog.html">Blog</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/contactus.html">Contact Us</a></li>
@@ -116,7 +116,7 @@
             </div> 
 
             <i class="uil uil-search"></i>
-            <i id="cart-box" aria-controls="cart-icon" class="uil uil-shopping-bag"></i>
+            <i id="cart-box" aria-controls="cart-icon" class="uil uil-shopping-bag" data-quantity="0"></i>
             <div id="login-modal">
                 <!-- Login close  -->
                 <div class="modal">
