--- a/cart.html
+++ b/cart.html
@@ -421,7 +421,7 @@
             </div>
         
             <div class="buttons">
-                <button>
+                <button id="exit">
                     <span class="span1">
                         <i class="uil uil-angle-left"></i>
                     </span>
