--- a/shop.html
+++ b/shop.html
@@ -98,7 +98,7 @@
                 class="primary-navigation flex">
                 <li><a class="fs-100 fs-montserrat bold-500" href="/index.html">Home</a></li>
                 <li><a class="active fs-100 fs-montserrat bold-500" href="/shop.html">Shop</a></li>
-                <!--<li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>-->
+                <li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/about.html">Abouts Us</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/blog.html">Blog</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/contactus.html">Contact Us</a></li>
@@ -373,24 +373,24 @@
                                 <ul class="first-content">
                                     <li class="first"><input name="Catégories" id="informatique" type="checkbox" data-id="1"> Informatique <span class="filtre-span span-plus" span-id="1"></span></li>
                                     <ul class="second-content1">
-                                        <li class="second"><input name="Catégories" type="checkbox" data-id="2"> Ordinateur de Bureau <span class="filtre-span span-plus" span-id="3"></span></li>
+                                        <li class="second"><input id="informatique1" name="Catégories" type="checkbox" data-id="2"> Ordinateur de Bureau <span class="filtre-span span-plus" span-id="3"></span></li>
                                         <ul class="third-content1">
-                                            <li class="third"><input name="Catégories" type="checkbox" data-id="3"> PC de Bureau</li>
-                                            <li class="third"><input name="Catégories" type="checkbox" data-id="4"> PC Tout en Un</li>
+                                            <li class="third"><input id="informatique2" name="Catégories" type="checkbox" data-id="3"> PC de Bureau</li>
+                                            <li class="third"><input id="informatique3" name="Catégories" type="checkbox" data-id="4"> PC Tout en Un</li>
                                         </ul>
-                                        <li class="second"><input name="Catégories" type="checkbox" data-id="5"> Ordinateur Portable <span class="filtre-span span-plus" span-id="4"></span></li>
+                                        <li class="second"><input id="informatique4" name="Catégories" type="checkbox" data-id="5"> Ordinateur Portable <span class="filtre-span span-plus" span-id="4"></span></li>
                                         <ul class="third-content2">
-                                            <li class="third"><input name="Catégories" type="checkbox" data-id="6"> Intel</li>
-                                            <li class="third"><input name="Catégories" type="checkbox" data-id="7"> PC Portable</li>
-                                            <li class="third"><input name="Catégories" type="checkbox" data-id="8"> PC Portable Gamer</li>
-                                            <li class="third"><input name="Catégories" type="checkbox" data-id="9"> PC Portable Pro</li>
+                                            <li class="third"><input id="informatique5" name="Catégories" type="checkbox" data-id="6"> Intel</li>
+                                            <li class="third"><input id="informatique6" name="Catégories" type="checkbox" data-id="7"> PC Portable</li>
+                                            <li class="third"><input id="informatique7" name="Catégories" type="checkbox" data-id="8"> PC Portable Gamer</li>
+                                            <li class="third"><input id="informatique8" name="Catégories" type="checkbox" data-id="9"> PC Portable Pro</li>
                                         </ul>
                                     </ul>                                       
                                     <li class="first  fs-poppins"><input name="Catégories" id="phone" type="checkbox" data-id="10"> Téléphonie & Tablette <span class="filtre-span span-plus" span-id="2"></span></li>
                                     <ul class="second-content2">
-                                        <li class="second"><input name="Catégories" type="checkbox" data-id="11"> Smartphone</li>
-                                        <li class="second"><input name="Catégories" type="checkbox" data-id="12"> SmartWatch</li>
-                                        <li class="second"><input name="Catégories" type="checkbox" data-id="13"> Accessoires</li>
+                                        <li class="second"><input id="phone1" name="Catégories" type="checkbox" data-id="11"> Smartphone</li>
+                                        <li class="second"><input id="phone2" name="Catégories" type="checkbox" data-id="12"> SmartWatch</li>
+                                        <li class="second"><input id="phone3" name="Catégories" type="checkbox" data-id="13"> Accessoires</li>
                                     </ul>
                                 </ul>
 
