--- a/commande.html
+++ b/commande.html
@@ -492,7 +492,7 @@
                                 </div>
                                 <div class="Num-comd">Commande #309716131</div>
                                 <div class="qty">Quantité: 2</div>
-                                <div class="state text-white bg-green">COMMANDE LIVRÉ</div>
+                                <div class="state text-white bg-red">COMMANDE ANNULÉE</div>
                                 <div class="time">Le 21-02-2024</div>
                             </div>
                             <div class="div-btn">
@@ -517,7 +517,7 @@
                                 </div>
                                 <div class="Num-comd">Commande #309716131</div>
                                 <div class="qty">Quantité: 2</div>
-                                <div class="state text-white bg-green">COMMANDE LIVRÉ</div>
+                                <div class="state text-white bg-red">COMMANDE RETOURNÉE</div>
                                 <div class="time">Le 21-02-2024</div>
                             </div>
                             <div class="div-btn">
