--- a/profil.html
+++ b/profil.html
@@ -393,24 +393,26 @@
                 </div>
             </div>
         </div>
-        <div class="adresse">
-            <div id="edit" class="title-content">
-                <div class="title-adresse">ADRESSES</div>
-                <i class="uil fs-200 text-green uil-edit"></i>
-            </div>
-            <div>
-                <hr class="custom-hr1">
-            </div>
-            <div class="adresse-content">
-                <div class="methode">
-                    <h3>Adresse par défaut :</h3>
-                    <p id="data-name1"></p>
-                    <p id="data-adresse"></p>
-                    <p id="data-ville"></p>
-                    <p id="data-phone"></p>
+
+        <div id="content" class="content">
+            <!-- <div class="adresse">
+                <div id="edit" class="title-content">
+                    <div class="title-adresse">ADRESSES</div>
+                    <i class="uil fs-200 text-green uil-edit"></i>
                 </div>
-                
-            </div>
+                <div>
+                    <hr class="custom-hr1">
+                </div>
+                <div class="adresse-content">
+                    <div class="methode">
+                        <h3>Adresse par défaut :</h3>
+                        <p id="data-name1"></p>
+                        <p id="data-adresse"></p>
+                        <p id="data-ville"></p>
+                        <p id="data-phone"></p>
+                    </div>
+                </div>
+            </div> -->
         </div>
     </section>
 
