--- a/profil.html
+++ b/profil.html
@@ -409,6 +409,10 @@
                 <div class="mode">
                     <h3 id="data-name"></h3>
                     <p id="data-email"></p>
+                    <div id="deleteAccount" class="del text-red">
+                        <h3>Supprimer le compte</h3>
+                        <i class="uil fs-200 text-red uil-trash-alt" title="Delete"></i>
+                    </div>
                 </div>
             </div>
         </div>
