--- a/track.html
+++ b/track.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="css/index.css">
     <!-- <link rel="stylesheet" href="css/shop.css"> -->
     <link rel="stylesheet" href="css/track.css">
-    <script src="js/index.js" defer></script>
-    <script src="js/track.js" defer></script>
+    <script src="js/index.js" type="module"></script>
+    <script src="js/track.js" type="module"></script>
     <title>Ecommerce Website</title>
 </head>
 <body class="home">
@@ -371,7 +371,7 @@
 
     <section class="first">
 
-        <div class="exit text-black" onclick="exit()">
+        <div id="exit" class="exit text-black">
             <i class="uil uil-arrow-left"></i>
             <p class="fs-150">Historique du colis</p>
         </div>
@@ -383,7 +383,7 @@
 
     <section class="second">
         <ul>
-            <li>
+            <li id="one" style="display: none;">
                 <i class="icon uil uil-capture"></i>
                 <div class="progress one">
                     <p>1</p>
@@ -391,10 +391,10 @@
                 </div>
                 <div>
                     <p class="text">Commande effectuée</p>
-                    <p class="text1">17-02-2024</p>
+                    <p class="text1 time1"></p>
                 </div>
             </li>
-            <li>
+            <li id="two" style="display: none;">
                 <i class="icon uil uil-clipboard-notes"></i>
                 <div class="progress two">
                     <p>2</p>
@@ -402,53 +402,76 @@
                 </div>
                 <div>
                     <p class="text">En attente de confirmation</p>
-                    <p class="text1">17-02-2024</p>
+                    <p class="text1 time1"></p>
                 </div>
             </li>
-            <li>
+            <li id="three" style="display: none;">
                 <i class="icon uil uil-truck-loading"></i>
                 <div class="progress three">
                     <p>3</p>
-                    <i class="uil uil-check"></i>
+                    <i class="uil ithree uil-check"></i>
                 </div>
                 <div>
                     <p class="text">En attente d'expédition</p>
-                    <p class="text1">17-02-2024</p>
+                    <p class="text1 time1"></p>
                 </div>
             </li>
-            <li>
+            <li id="four" style="display: none;">
                 <i class="icon uil uil-exchange"></i>
                 <div class="progress four">
                     <p>4</p>
-                    <i class="uil uil-check"></i>
+                    <i class="uil ifour uil-check"></i>
                 </div>
                 <div>
-                    <p class="text">Commande expédiée</p>
-                    <p class="text1">18-02-2024</p>
+                    <p class="text fourText">Commande expédiée</p>
+                    <p class="text1 time1"></p>
                 </div>
             </li>
-            <li>
+            <li id="five" style="display: none;">
                 <i class="icon uil uil-truck"></i>
                 <div class="progress five">
                     <p>5</p>
-                    <i class="uil uil-check"></i>
+                    <i class="uil ifive uil-check"></i>
                 </div>
                 <div>
                     <p class="text">En cours de livraison</p>
-                    <p class="text1">19-02-2024</p>
+                    <p class="text1 time1"></p>
                 </div>
             </li>
-            <li>
+            <li id="six" style="display: none;">
                 <i class="icon uil uil-map-marker"></i>
                 <div class="progress six">
                     <p>6</p>
-                    <i class="uil uil-check"></i>
+                    <i class="uil isix uil-check"></i>
                 </div>
                 <div>
                     <p class="text">Commande livrée</p>
-                    <p class="text1">20-02-2024</p>
+                    <p class="text1 time1"></p>
                 </div>
             </li>
+            <li id="seven" style="display: none;">
+                <i class="icon uil uil-clipboard-notes"></i>
+                <div class="progress seven">
+                    <p>7</p>
+                    <i class="uil iseven uil-check"></i>
+                </div>
+                <div>
+                    <p class="text">Commande en examination de retour</p>
+                    <p class="text1 time1"></p>
+                </div>
+            </li>
+            <li id="eight" style="display: none;">
+                <i class="icon uil uil-redo"></i>
+                <div class="progress eight">
+                    <p>8</p>
+                    <i class="uil ieight uil-check"></i>
+                </div>
+                <div>
+                    <p class="text">Commande retournée</p>
+                    <p class="text1 time1"></p>
+                </div>
+            </li>
+            
         </ul>
     </section>
 
