--- a/login.html
+++ b/login.html
@@ -166,7 +166,7 @@
             </form>
 
             <!-- Forgot Password form -->
-            <form id="forgot-password" class="input-box">
+            <form id="forgot-password" class="input-box hidden">
 
                 <!-- Email -->
                 <div class="login_div">
@@ -186,7 +186,7 @@
             </form>
 
             <!-- Register form -->
-            <form id="register" class="input-box">
+            <form id="register" class="input-box hidden">
                 <!-- Name -->
                 <div class="login_div">
                     <input class="login-input" id="user-name" type="text" name="name" autocomplete="off" placeholder=" ">
@@ -237,7 +237,7 @@
             </form>
 
              <!-- Password form -->
-             <form id="password" class="input-box">
+             <form id="password" class="input-box hidden">
                 
                 <!-- Password -->
                 <div class="login_div">
