--- a/admin/index.html
+++ b/admin/index.html
@@ -18,7 +18,7 @@
                 <li>
                     <a href="#">
                         <span class="icon">
-                            <ion-icon name="logo-apple"></ion-icon>
+                            <ion-icon name="storefront-outline"></ion-icon>
                         </span>
                         <span class="title">Niger.net</span>
                     </a>
@@ -36,9 +36,36 @@
                 <li>
                     <a href="#">
                         <span class="icon">
+                            <ion-icon name="server-outline"></ion-icon>
+                        </span>
+                        <span class="title">Products</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span class="icon">
+                            <ion-icon name="reorder-four-outline"></ion-icon>
+                        </span>
+                        <span class="title">Orders</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span class="icon">
                             <ion-icon name="people-outline"></ion-icon>
                         </span>
                         <span class="title">Customers</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span class="icon">
+                            <ion-icon name="analytics-outline"></ion-icon>
+                        </span>
+                        <span class="title">Analytics and Reporting</span>
                     </a>
                 </li>
 
@@ -54,18 +81,10 @@
                 <li>
                     <a href="#">
                         <span class="icon">
-                            <ion-icon name="product-outline"></ion-icon>
+                            <!-- <ion-icon name="repeat-outline"></ion-icon> -->
+                            <ion-icon name="reload-outline"></ion-icon>
                         </span>
-                        <span class="title">Products</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <ion-icon name="add-outline"></ion-icon>
-                        </span>
-                        <span class="title">Add</span>
+                        <span class="title">Review and Return</span>
                     </a>
                 </li>
 
@@ -318,7 +337,7 @@
     </div>
 
     <!-- =========== Scripts =========  -->
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
 
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
