--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><a class="fs-100 fs-montserrat bold-500" href="/shop.html">Shop</a></li>
                 <!--<li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>-->
                 <li><a class="fs-100 fs-montserrat bold-500" href="/about.html">Abouts Us</a></li>
-                <li><a class="fs-100 fs-montserrat bold-500" href="/blog.html">Blog</a></li>
+                <!-- <li><a class="fs-100 fs-montserrat bold-500" href="/blog.html">Blog</a></li> -->
                 <li><a class="fs-100 fs-montserrat bold-500" href="/contactus.html">Contact Us</a></li>
                 </ul>
             </nav>
