--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,7 @@
     <title>Responsive Admin Dashboard | Korsat X Parmaga</title>
     <!-- ======= Styles ====== -->
     <link rel="stylesheet" href="css/index.css">
+    <!-- <link rel="stylesheet" href="/css/index.css"> -->
 </head>
 
 <body>
@@ -24,8 +25,8 @@
                     </a>
                 </li>
 
-                <li>
-                    <a href="#">
+                <li class="hovered">
+                    <a href="index.html">
                         <span class="icon">
                             <ion-icon name="home-outline"></ion-icon>
                         </span>
@@ -34,7 +35,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="products.html">
                         <span class="icon">
                             <ion-icon name="server-outline"></ion-icon>
                         </span>
@@ -43,7 +44,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="orders.html">
                         <span class="icon">
                             <ion-icon name="reorder-four-outline"></ion-icon>
                         </span>
@@ -123,7 +124,7 @@
                 </div>
 
                 <div class="user">
-                    <img src="imgs/customer01.jpg" alt="">
+                    <img src="imgs/moi.jpeg" alt="">
                 </div>
             </div>
 
